pico runtime services - checkpointing processor